[project]
name = "langgraph-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.8",
    "duckduckgo-search>=8.0.1",
    "faiss-cpu>=1.11.0",
    "graphviz>=0.20.3",
    "langchain[openai]>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "pypdf>=5.4.0",
    "sentence-transformers>=4.1.0",
    "grandalf>=0.8",
]
